test/expected/explain_exsi.out
explain export static int x
                      ^
23: error: "export static int" is illegal for built-in type
